Removing unused pointers, creating indexes
